force-app/main/default/objects/Apttus__DocumentVersionDetail__c/Apttus__DocumentVersionDetail__c.object-meta.xml
<CustomObject>
    <description>Holds the version details of a document</description>
    <label>Document Version Detail</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Version Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>