force-app/main/default/objects/Apttus__DocumentVersionDetail__c/fields/Apttus__Action2__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Action2__c</fullName>
    <description>The action which created the version</description>
    <inlineHelpText>The action which created the version</inlineHelpText>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Generate Agreement</fullName>
            </value>
            <value>
                <fullName>Regenerate Agreement</fullName>
            </value>
            <value>
                <fullName>Create Offline Agreement</fullName>
            </value>
            <value>
                <fullName>Import Offline Agreement</fullName>
            </value>
            <value>
                <fullName>Check In</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>