force-app/main/default/objects/Apttus__DocumentVersionDetail__c/fields/Apttus__Comment__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Comment__c</fullName>
    <description>Comments</description>
    <inlineHelpText>Comments</inlineHelpText>
    <label>Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>