force-app/main/default/objects/Apttus__DocumentVersionDetail__c/fields/Apttus__DocumentInfo__c.field-meta.xml
<CustomField>
    <fullName>Apttus__DocumentInfo__c</fullName>
    <description>Additional document information</description>
    <inlineHelpText>Additional document information</inlineHelpText>
    <label>Document Info</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Final</fullName>
            </value>
            <value>
                <fullName>Clean</fullName>
            </value>
            <value>
                <fullName>Redlines</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>