force-app/main/default/objects/Apttus__DocumentVersionDetail__c/fields/Apttus__DocumentVersionId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__DocumentVersionId__c</fullName>
    <description>Lookup to the Document Version this record is part of</description>
    <inlineHelpText>Lookup to the Document Version this record is part of</inlineHelpText>
    <label>Document Version</label>
    <referenceTo>Apttus__DocumentVersion__c</referenceTo>
    <relationshipLabel>Document Version Details</relationshipLabel>
    <relationshipName>Document_Version_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>