force-app/main/default/objects/Apttus__DocumentVersionDetail__c/fields/Apttus__FileSize__c.field-meta.xml
<CustomField>
    <fullName>Apttus__FileSize__c</fullName>
    <defaultValue>0</defaultValue>
    <description>File size of the associated content</description>
    <inlineHelpText>File size of the associated content</inlineHelpText>
    <label>File Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>