force-app/main/default/objects/Apttus__DocumentVersionDetail__c/fields/Apttus__FileType__c.field-meta.xml
<CustomField>
    <fullName>Apttus__FileType__c</fullName>
    <description>FileType of content id</description>
    <inlineHelpText>fileType of content id</inlineHelpText>
    <label>FileType</label>
    <length>30</length>
    <type>Text</type>
</CustomField>