force-app/main/default/objects/Apttus__DocumentVersionDetail__c/fields/Apttus__IsSentForManualSignature__c.field-meta.xml
<CustomField>
    <fullName>Apttus__IsSentForManualSignature__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag is set to true for document send for signature manually.</description>
    <inlineHelpText>This flag is set to true for document send for signature manually.</inlineHelpText>
    <label>Is Sent for Manual Signature</label>
    <type>Checkbox</type>
</CustomField>