force-app/main/default/objects/Apttus__DocumentVersionDetail__c/fields/Apttus__IsTransient__c.field-meta.xml
<CustomField>
    <fullName>Apttus__IsTransient__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates a transient version. A new version is in transient state until the document is successfully attached to the version. Workflow rules should check this field to test for false before firing so that rules are not incorrectly fired when transient versions are created .</description>
    <inlineHelpText>Indicates a transient version. A new version is in transient state until the document is successfully attached to the version. Workflow rules should check this field to test for false before firing.</inlineHelpText>
    <label>Is Transient</label>
    <type>Checkbox</type>
</CustomField>