force-app/main/default/objects/Apttus__DocumentVersionDetail__c/fields/Apttus__ParentDocumentVersionDetailId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ParentDocumentVersionDetailId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the parent document version id from where this version is derived</description>
    <inlineHelpText>Lookup to the parent document version id from where this version is derived</inlineHelpText>
    <label>Ancestor</label>
    <referenceTo>Apttus__DocumentVersionDetail__c</referenceTo>
    <relationshipLabel>Document Version Details</relationshipLabel>
    <relationshipName>Document_Version_Details</relationshipName>
    <type>Lookup</type>
</CustomField>