force-app/main/default/objects/Apttus__DocumentVersionDetail__c/fields/Apttus__PendingReviews__c.field-meta.xml
<CustomField>
    <fullName>Apttus__PendingReviews__c</fullName>
    <description>Pending Reviews Count</description>
    <inlineHelpText>Count of Review Cycles Pending.</inlineHelpText>
    <label>Pending Reviews</label>
    <summaryFilterItems>
        <field>Apttus__ReviewCycle__c.Apttus__ReviewStatus__c</field>
        <operation>equals</operation>
        <value>In Progress, Not Started</value>
    </summaryFilterItems>
    <summaryForeignKey>Apttus__ReviewCycle__c.Apttus__OriginalDocumentVersionDetail__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>