force-app/main/default/objects/Apttus__DocumentVersionDetail__c/fields/Apttus__Tags__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Tags__c</fullName>
    <description>Document tags</description>
    <inlineHelpText>Document tags</inlineHelpText>
    <label>Tags</label>
    <length>255</length>
    <type>Text</type>
</CustomField>