force-app/main/default/objects/Apttus__DocumentVersionDetail__c/fields/Apttus__TemplateVersionId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__TemplateVersionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Template version that was used to generate this document</description>
    <inlineHelpText>Template version that was used to generate this document</inlineHelpText>
    <label>Template Version</label>
    <referenceTo>Apttus__TemplateVersion__c</referenceTo>
    <relationshipLabel>Document Version Details</relationshipLabel>
    <relationshipName>DocumentVersionDetails</relationshipName>
    <type>Lookup</type>
</CustomField>