force-app/main/default/objects/Apttus__DocumentVersionDetail__c/fields/Apttus__Title__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Title__c</fullName>
    <description>The title of the document version</description>
    <inlineHelpText>The title of the document version</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>