force-app/main/default/objects/Apttus__DocumentVersionDetail__c/fields/Apttus__TotalInsightScore__c.field-meta.xml
<CustomField>
    <fullName>Apttus__TotalInsightScore__c</fullName>
    <description>Total Risk Score of Insights on a document</description>
    <inlineHelpText>Total Risk Score of Insights on a document</inlineHelpText>
    <label>Total Insight Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>