force-app/main/default/objects/Apttus__DocumentVersionDetail__c/fields/Apttus__VersionMajor__c.field-meta.xml
<CustomField>
    <fullName>Apttus__VersionMajor__c</fullName>
    <description>Major version</description>
    <inlineHelpText>Major version</inlineHelpText>
    <label>Version Major</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>