force-app/main/default/objects/Apttus__DocumentVersionDetail__c/fields/Apttus__VersionMinor__c.field-meta.xml
<CustomField>
    <fullName>Apttus__VersionMinor__c</fullName>
    <description>Minor version</description>
    <inlineHelpText>Minor version</inlineHelpText>
    <label>Version Minor</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>