force-app/main/default/objects/Apttus__DocumentVersionDetail__c/fields/Apttus__VersionRevision__c.field-meta.xml
<CustomField>
    <fullName>Apttus__VersionRevision__c</fullName>
    <description>Revision version</description>
    <inlineHelpText>Revision version</inlineHelpText>
    <label>Version Revision</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>