force-app/main/default/objects/Apttus__DocumentVersionDetail__c/fields/Apttus__View__c.field-meta.xml
<CustomField>
    <fullName>Apttus__View__c</fullName>
    <description>View the associated content</description>
    <formula>if(Apttus__IsTransient__c == FALSE , CASE(Apttus__FileType__c, &quot;ContentDocument&quot;, HYPERLINK(&quot;/sfc/servlet.shepherd/version/download/&quot; &amp; Apttus__ContentVersionId__c,&quot;View&quot;), HYPERLINK(&quot;/servlet/servlet.FileDownload?file=&quot; &amp; Apttus__ContentId__c,&quot;View&quot;)) ,&quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>View the associated content</inlineHelpText>
    <label>View</label>
    <type>Text</type>
</CustomField>